<resources>
    <string name="app_name">AlfaBooks</string>
    <string name="textSenha">Senha</string>
    <string name="textEmail">E-mail</string>
    <string name="textButtonLogin">Acessar</string>
    <string name="textEsqueceuASenha">Esqueceu sua senha?</string>
    <string name="action_search">Pesquisar</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="lorem_ipsum">PreviousNext This lesson teaches you to Create the Views Create the Fragment Add a ViewPager Customize the Animation with PageTransformer Try it out DOWNLOAD THE SAMPLE APP Animations.zip  Screen slides are transitions between one entire screen to another and are common with UIs like setup wizards or slideshows. This lesson shows you how to do screen slides with a ViewPager provided by the support library. ViewPagers can animate screen slides automatically. Here\'s what a screen slide looks like that transitions from one screen of content to the next:PreviousNext This lesson teaches you to Create the Views Create the Fragment Add a ViewPager Customize the Animation with PageTransformer Try it out DOWNLOAD THE SAMPLE APP Animations.zip  Screen slides are transitions between one entire screen to another and are common with UIs like setup wizards or slideshows. This lesson shows you how to do screen slides with a ViewPager provided by the support library. ViewPagers can animate screen slides automatically. Here\'s what a screen slide looks like that transitions from one screen of content to the next:PreviousNext This lesson teaches you to Create the Views Create the Fragment Add a ViewPager Customize the Animation with PageTransformer Try it out DOWNLOAD THE SAMPLE APP Animations.zip  Screen slides are transitions between one entire screen to another and are common with UIs like setup wizards or slideshows. This lesson shows you how to do screen slides with a ViewPager provided by the support library. ViewPagers can animate screen slides automatically. Here\'s what a screen slide looks like that transitions from one screen of content to the next:PreviousNext This lesson teaches you to Create the Views Create the Fragment Add a ViewPager Customize the Animation with PageTransformer Try it out DOWNLOAD THE SAMPLE APP Animations.zip  Screen slides are transitions between one entire screen to another and are common with UIs like setup wizards or slideshows. This lesson shows you how to do screen slides with a ViewPager provided by the support library. ViewPagers can animate screen slides automatically. Here\'s what a screen slide looks like that transitions from one screen of content to the next:PreviousNext This lesson teaches you to Create the Views Create the Fragment Add a ViewPager Customize the Animation with PageTransformer Try it out DOWNLOAD THE SAMPLE APP Animations.zip  Screen slides are transitions between one entire screen to another and are common with UIs like setup wizards or slideshows. This lesson shows you how to do screen slides with a ViewPager provided by the support library. ViewPagers can animate screen slides automatically. Here\'s what a screen slide looks like that transitions from one screen of content to the next:</string>
    <string name="action_shopping_cart">Carrinho de compras</string>
    <string name="cart_title_txtv">Carrinho de compras</string>
    <string name="continuar_comprando_car_btn">Continuar Comprando</string>
    <string name="finalizar_compra_cart_btn">Finalizar Compra</string>
    <string name="qtd_cart_txtv">Qtd:</string>
    <string name="remove_item_carrinho">Item removido com sucesso</string>
    <string name="desfazer">Desfazer</string>
    <string name="sobre">Sobre Nós</string>
    <string name="Cliente">Cliente</string>
    <string name="Produto">Produto</string>
    <string name="Fornecedor">Fornecedor</string>
    <string name="cadastrar">Cadastrar</string>
    <string name="atualizar">Atualizar</string>
    <string name="deletar">Deletar</string>
    <string name="title_activity_login2">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="remover">Remover</string>
    <string name="removerproduto">Remover Produto</string>
    <string name="remover_fornecedor">Remover Fornecedor</string>
    <string name="remover_cliente">Remover Cliente</string>
    <string name="atualizar_produto">Atualizar Produto</string>
    <string name="atualizar_fornecedor">Atualizar Fornecedor</string>
    <string name="atualizar_cliente">Atualizar Cliente</string>
    <string name="cadastrar_cliente">Cadastrar Cliente</string>
    <string name="cadastrar_produto">Cadastrar Produto</string>
    <string name="cadastrar_fornecedor">Cadastrar Fornecedor</string>
    <string name="login">Login</string>
    <string name="painel_adm">Painel Adm</string>
    <string name="pesquisar">Pesquisar</string>
</resources>
