<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp">
    <LinearLayout
        android:orientation="vertical" android:layout_width="match_parent"
        android:layout_height="match_parent">


        <TextView
            android:textSize="24sp"
            android:paddingTop="24dp"
            android:paddingBottom="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Cliente" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/cad_cli_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/MaterialButton.ButtonNoBackground"
                android:text="@string/cadastrar" />

            <Button
                android:id="@+id/atu_cli_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/MaterialButton.ButtonNoBackground"
                android:text="@string/atualizar" />

            <Button
                android:id="@+id/rem_cli_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/MaterialButton.ButtonNoBackground"
                android:text="@string/remover" />
        </LinearLayout>

        <TextView
            android:textSize="24sp"
            android:paddingTop="24dp"
            android:paddingBottom="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Produto" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/cad_prod_btn"
                style="@style/MaterialButton.ButtonNoBackground"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cadastrar" />

            <Button
                android:id="@+id/atu_prod_btn"
                style="@style/MaterialButton.ButtonNoBackground"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/atualizar" />

            <Button
                android:id="@+id/rem_prod_btn"
                style="@style/MaterialButton.ButtonNoBackground"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/remover" />
        </LinearLayout>

        <TextView
            android:textSize="24sp"
            android:paddingTop="24dp"
            android:paddingBottom="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Fornecedor" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/cad_forn_btn"
                style="@style/MaterialButton.ButtonNoBackground"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cadastrar" />

            <Button
                android:id="@+id/atu_forn_btn"
                style="@style/MaterialButton.ButtonNoBackground"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/atualizar" />

            <Button
                android:id="@+id/rem_forn_btn"
                style="@style/MaterialButton.ButtonNoBackground"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/remover" />
        </LinearLayout>

    </LinearLayout>
</ScrollView>
